<resources>
    <string name="app_name">Movie Tracker</string>
    <string name="header_title">Youssef Movie Tracker</string>
    <string name="movie_title_label">Movie Title</string>
    <string name="movie_title_hint">Enter movie title</string>
    <string name="genre_label">Genre</string>
    <string name="genre_hint">Enter genre</string>
    <string name="rating_label">Rating</string>
    <string name="remove_all">Remove All</string>
    <string name="remove_last">Remove Last</string>
    <string name="add_rating">Add Rating</string>
    <string name="movie_title_sample">Movie Title</string>
    <string name="genre_sample">Genre</string>
    <string name="tracked_movies">Tracked Movies</string>
    <string name="genre_format">Genre: %1$s</string>

</resources>
